<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="kg">KG</string>
    <string name="male_button">male_button</string>
    <string name="female_button">female_button</string>
    <string name="select_height">Select Height</string>
    <string name="centimeter">Centimeter</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="back">Back</string>
    <string name="_18_1">18.1</string>
    <string name="overweight">OverWeight</string>
    <string name="bmi">BMI</string>
    <string name="need_weight_between">Need Weight Between</string>
    <string name="_58_70">58~70</string>
    <string name="_50">50</string>
    <string name="height">Height</string>
    <string name="calculating_bmi">Calculating BMI</string>
    <string name="next">NEXT</string>
    <string name="age">AGE</string>
    <string name="pounds">Pounds</string>
    <string name="_20">20</string>
    <string name="_49">49</string>
    <string name="_1">1</string>
    <!-- Strings used for fragments for navigation -->

</resources>