<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".heightselect"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:id="@+id/selectheighttxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_height"
        android:gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:textColor="#3F51B5"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="-50dp">
        <ImageView
            android:id="@+id/avatar"
            android:layout_width="165dp"
            android:layout_height="500dp"
            android:src="@drawable/standingmale"
            />

        <LinearLayout
            android:id="@+id/llcm"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/centimeter"
                android:textSize="30sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/selectedcm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcheight"
                android:visibility="visible"
                android:layout_width="150dp"
                android:layout_height="330dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feet"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/selectedfeet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rpfeet"
                android:layout_width="150dp"
                android:layout_height="130dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inches"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/selectedinch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:textSize="20sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rpinch"
                android:layout_width="150dp"
                android:layout_height="130dp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llbuttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="-100dp">
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:backgroundTint="#FFFFFF"
            android:text="@string/back"/>

        <Button
            android:id="@+id/nextbtn"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:text="Next"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="#2196F3"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
</LinearLayout>